change note color

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -49,4 +49,10 @@
     no-repeat;
 }
 
+.theme-admonition-note {
+  background-color: #ffffcc;
+}
 
+.alert--secondary {
+  --ifm-alert-border-color: #f0a000;
+}
