--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,6 +27,10 @@
   --ifm-color-primary-lightest: #ffffff;
 }
 
+.markdown h1:first-child {
+  --ifm-h1-font-size: 2.4rem;
+}
+
 .hidden {
   display: none !important;
 }
