cs insight bi folders and wip files

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,6 +27,11 @@
   --ifm-color-primary-lightest: #ffffff;
 }
 
+
+.menu__link {
+  font-size: 15px;
+}
+
 .markdown h1:first-child {
   --ifm-h1-font-size: 2.4rem;
 }
