update the color again

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -82,7 +82,7 @@ p {
 }
 
 .details_node_modules-\@docusaurus-theme-classic-lib-theme-Details-styles-module {
-  background-color: #f6ffff;
+  background-color: #f6fdff;
 }
 
 [data-theme='dark'] .details_node_modules-\@docusaurus-theme-classic-lib-theme-Details-styles-module {
