--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -35,6 +35,10 @@
 .markdown h1:first-child {
   --ifm-h1-font-size: 2.4rem;
 }
+.title_node_modules-\@docusaurus-theme-classic-lib-theme-DocCategoryGeneratedIndexPage-styles-module {
+  --ifm-h1-font-size: 2.4rem !important;
+}
+
 
 .markdown li > p {
   margin-top: 10px;
