--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -13,7 +13,7 @@
   --ifm-color-primary-light: #000000;
   --ifm-color-primary-lighter: #000000;
   --ifm-color-primary-lightest: #000000;
-  --sidebar-width: 400px;
+  --doc-sidebar-width: 400px;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
